[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/paused.png" type="Texture" id=1]
[ext_resource path="res://assets/img/btn_resume_active.png" type="Texture" id=2]
[ext_resource path="res://assets/img/btn_end_inactive.png" type="Texture" id=3]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=4]

[node name="Pause" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Resume" type="TextureButton" parent="."]
margin_left = 30.8537
margin_top = 291.011
margin_right = 136.854
margin_bottom = 310.011
focus_neighbour_top = NodePath("../End")
focus_neighbour_bottom = NodePath("../End")
focus_next = NodePath("../End")
focus_previous = NodePath("../End")
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="TextureButton" parent="."]
margin_left = 30.5992
margin_top = 312.941
margin_right = 136.599
margin_bottom = 331.941
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../Resume")
focus_next = NodePath("../Resume")
focus_previous = NodePath("../Resume")
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Resume" to="." method="_on_Resume_button_down"]
[connection signal="button_up" from="Resume" to="." method="_on_Resume_button_up"]
[connection signal="focus_entered" from="Resume" to="." method="_on_Resume_focus_entered"]
[connection signal="focus_exited" from="Resume" to="." method="_on_Resume_focus_exited"]
[connection signal="mouse_entered" from="Resume" to="." method="_on_Resume_mouse_entered"]
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="button_down" from="End" to="." method="_on_End_button_down"]
[connection signal="button_up" from="End" to="." method="_on_End_button_up"]
[connection signal="focus_entered" from="End" to="." method="_on_End_focus_entered"]
[connection signal="focus_exited" from="End" to="." method="_on_End_focus_exited"]
[connection signal="mouse_entered" from="End" to="." method="_on_End_mouse_entered"]
[connection signal="pressed" from="End" to="." method="_on_End_pressed"]
